--- a/_includes/form/presets/provinceCode.html
+++ b/_includes/form/presets/provinceCode.html
@@ -1,7 +1,7 @@
 <h2>{{ site.data.i18n.form.presets.ProvinceCode.title[page.lang] }}</h2>
 <div class="form-group">
-  <label for="orgLevel">{{ site.data.i18n.form.presets.ProvinceCode.label[page.lang] }}</label>
-  <select class="form-control" id="orgLevel" name="orgLevel">
+  <label for="provinceCode">{{ site.data.i18n.form.presets.ProvinceCode.label[page.lang] }}</label>
+  <select class="form-control" id="provinceCode" name="provinceCode">
     <option value="">&nbsp;</option>
     <option value="ab">{{ site.data.i18n.form.presets.ProvinceCode.options.ab[page.lang] }}</option>
     <option value="bc">{{ site.data.i18n.form.presets.ProvinceCode.options.bc[page.lang] }}</option>
