--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -8,22 +8,29 @@
 
   <select class="form-control" id="{{ name }}" name="{{ name }}" required="required">
     <option value="">&nbsp;</option>
-    <optgroup label="Federal">
+    <optgroup label={{ site.Federal[page.lang] }}>
       {% for org in site.data.administrations.federal %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
       {% endfor %}
     </optgroup>
-    <optgroup label="Provincial">
+    <optgroup label={{ site.Provincial[page.lang] }}>
       {% for org in site.data.administrations.provincial %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
       {% endfor %}
     </optgroup>
-    <optgroup label="Municipal">
+    <optgroup label={{ site.Municipal[page.lang] }}>
       {% for org in site.data.administrations.municipal %}
+        {% if org.name[page.lang] != nil %}
+          <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
+        {% endif %}
+      {% endfor %}
+    </optgroup>
+    <optgroup label={{ site.Aboriginal[page.lang] }}>
+      {% for org in site.data.administrations.aboriginal %}
         {% if org.name[page.lang] != nil %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
         {% endif %}
