--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -2,7 +2,7 @@
 <ul class="list-unstyled">
    <li>
         <details>
-            <summary>Federal</summary>
+            <summary>{{ site.Federal[page.lang] }}</summary>
             <div class="list-group">
             {% assign repo_array = "" | split: ','%}
             {% assign groups_array = "" | split: ','%}
@@ -62,7 +62,7 @@
    </li>
    <li>
         <details>
-        <summary>Provincial</summary>
+        <summary>{{ site.Provincial[page.lang] }}</summary>
         <div class="list-group">
             {% assign repo_array = "" | split: ','%}
             {% assign groups_array = "" | split: ','%}
@@ -122,7 +122,7 @@
    </li>
    <li>
         <details>
-            <summary>Municipal</summary>
+            <summary>{{ site.Municipal[page.lang] }}</summary>
                 <div class="list-group">
             {% assign repo_array = "" | split: ','%}
             {% assign groups_array = "" | split: ','%}
@@ -180,5 +180,65 @@
             </div>
         </details>
    </li>
+   <li>
+        <details>
+            <summary>{{ site.Aboriginal[page.lang] }}</summary>
+                <div class="list-group">
+            {% assign repo_array = "" | split: ','%}
+            {% assign groups_array = "" | split: ','%}
+            {% for fptms in site.data.code %}
+                {% assign fptm = fptms[1] %}
+                {% for admins in fptm %}
+                    {% assign admin = admins[1] %}
+                    {% for release in admin.releases %}
+                        {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
+                        {% if aName[0].name[page.lang] != nil %}
+                            {% if release.repositoryURL[page.lang] != nil %}
+                                {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
+                                {% assign repo_size =  repo_url | size %}
+                                {% if repo_size == 3  %}
+
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign repo_array = repo_array | push: org_url%}
+                                    {% assign groups_array = groups_array | push: grp_url %}
+                                    {% elsif repo_size == 4  %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
+
+                                    {% assign repo_array = repo_array | push: org_url %}
+                                    {% assign groups_array = groups_array | push: grp_url %}
+                                {% endif %}
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                {% endfor %}
+            {% endfor %}
+
+
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
+            {% for grp in groups_array %}
+            {% assign grp_name = grp | split: "/" %}
+                {% if grp_name.size == 2  %}
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {% elsif grp_name.size == 3  %}
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+
+                {%endif%}   
+                {% for repo in repo_array %}
+                {% assign org_name =  repo | split: "/" %}
+                    {% if repo contains {{grp}} %}
+                        <ul>
+                            <li>
+                                {{org_name[0]}}
+                            </li>
+                        </ul>
+                    {%endif%}
+                {% endfor %}
+            {% endfor %}
+            </div>
+        </details>
+    </li>
 </ul>
 </div>
