--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -9,10 +9,10 @@
         <label for="dt_govLevel">{{ site.LevelOfGovernment[page.lang] }}</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
           <option value="">&nbsp;</option>
-          {% for fptms in site.data.code %}
-          {% assign fptm = fptms[0] %}
-            <option value="{{ fptm | capitalize  }}">{{ fptm | capitalize }}</option>
-          {% endfor %}
+          <option value="federal">{{ site.Federal[page.lang] }}</option>
+          <option value="provincial">{{ site.Provincial[page.lang] }}</option>
+          <option value="municipal">{{ site.Municipal[page.lang] }}</option>
+          <option value="aboriginal">{{ site.Aboriginal[page.lang] }}</option>
         </select>
       </div>
 
@@ -42,6 +42,14 @@
             {% for admins in fptm %}
               {% assign admin = admins[1] %}   
               {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
+              {% endif %}
+            {% endfor %}
+
+            {% for admins in fptm %}
+              {% assign admin = admins[1] %}   
+              {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {% assign admin_array = admin_array | push: aName[0].name[page.lang] %}
               {% endif %}
@@ -187,6 +195,11 @@
             {% if aName[0].name[page.lang] != nil %}
               <td>{{ aName[0].name[page.lang] }}</td>
             {% endif %}
+
+            {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
+            {% if aName[0].name[page.lang] != nil %}
+              <td>{{ aName[0].name[page.lang] }}</td>
+            {% endif %}
             
             <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
             <td>{{ release.description[page.lang] }}</td>
@@ -270,6 +283,11 @@
           {% endif %}
           
           {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
+          {% if aName[0].name[page.lang] != nil %}
+            <p>Administration: {{ aName[0].name[page.lang] }}</p>
+          {% endif %}
+
+          {% assign aName = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
           {% if aName[0].name[page.lang] != nil %}
             <p>Administration: {{ aName[0].name[page.lang] }}</p>
           {% endif %}
