Changed name translation (value -> option) for better consistency

--- a/_includes/form/presets/status.html
+++ b/_includes/form/presets/status.html
@@ -3,10 +3,10 @@
   <label for="status">{{ site.data.i18n.form.presets.Status.label[page.lang] }}</label>
   <select class="form-control" id="status" name="status">
     <option value="">&nbsp;</option>
-    <option value="Alpha">{{ site.data.i18n.form.presets.Status.values.alpha[page.lang] }}</option>
-    <option value="Beta">{{ site.data.i18n.form.presets.Status.values.beta[page.lang] }}</option>
-    <option value="Maintained">{{ site.data.i18n.form.presets.Status.values.maintained[page.lang] }}</option>
-    <option value="Deprecated">{{ site.data.i18n.form.presets.Status.values.deprecated[page.lang] }}</option>
-    <option value="Retired">{{ site.data.i18n.form.presets.Status.values.retired[page.lang] }}</option>
+    <option value="Alpha">{{ site.data.i18n.form.presets.Status.options.alpha[page.lang] }}</option>
+    <option value="Beta">{{ site.data.i18n.form.presets.Status.options.beta[page.lang] }}</option>
+    <option value="Maintained">{{ site.data.i18n.form.presets.Status.options.maintained[page.lang] }}</option>
+    <option value="Deprecated">{{ site.data.i18n.form.presets.Status.options.deprecated[page.lang] }}</option>
+    <option value="Retired">{{ site.data.i18n.form.presets.Status.options.retired[page.lang] }}</option>
   </select>
 </div>
