--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -40,6 +40,8 @@
         {% include form/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required %}
       {% when 'string' %}
         {% include form/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
+      {% when 'select' %}
+        {% include form/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options %}
       {% when 'string-i18n' %}
         {% include form/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
       {% else %}
