Added select widget & updated documentation

--- a/_includes/form/select.html
+++ b/_includes/form/select.html
@@ -1,10 +1,11 @@
 <h2>{{ site.data.i18n.form[include.id][include.title].title[page.lang] }}</h2>
 <div class="form-group">
-  <label for="{{ include.title }}"{% if include.required %} class="required"{% endif %}>{{ site.data.i18n.form[include.id][include.title].label[page.lang] }}{% if include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
-  <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.required %} required="required"{% endif %}>
+  {%- capture label -%}{{ site.data.i18n.form[include.id][include.title].label[page.lang] }}{%- endcapture -%}
+  {% include form/components/label.html name=include.title required=include.required label=label %}
+  <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.required == nil or include.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
-    {% for include.options %}
-      <option value="{{ option.value }}">{{ site.data.i18n.form[include.id][include.title].options[option.label][page.lang] }}</option>
+    {% for option in include.options %}
+      <option value="{{ option }}">{{ site.data.i18n.form[include.id][include.title].options[option][page.lang] }}</option>
     {% endfor %}
   </select>
 </div>
