--- a/_includes/form/presets/orgLevel.html
+++ b/_includes/form/presets/orgLevel.html
@@ -1,8 +1,8 @@
 <h2>{{ site.data.i18n.form.presets.OrgLevel.title[page.lang] }}</h2>
 <div class="form-group">
-  <label for="orgLevel" class="required">{{ site.data.i18n.form.presets.OrgLevel.label[page.lang] }} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong></label>
+    {%- capture label -%}{{ site.data.i18n.form.presets.OrgLevel.label[page.lang] }}{%- endcapture -%}
+    {% include form/components/label.html name=include.title required=include.required label=label %}
   <select class="form-control" id="orgLevel" name="orgLevel" required="required">
-    <option value="">&nbsp;</option>
     <option value="federal" disabled>{{ site.data.i18n.form.presets.OrgLevel.options.federal[page.lang] }}</option>
     <option value="provincial" disabled>{{ site.data.i18n.form.presets.OrgLevel.options.provincial[page.lang] }}</option>
     <option value="municipal" selected>{{ site.data.i18n.form.presets.OrgLevel.options.municipal[page.lang] }}</option>
